<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\BelongsToMany;
use Illuminate\Database\Eloquent\Relations\HasMany;

class Employee extends Model
{
    use HasFactory;

    protected $fillable = [
        'user_id',
        'team_id',
        'name',
        'full_name',
        'employee_number',
        'nip_lama',
        'nip_baru',
        'position',
        'office',
        'display_name',
        'is_active',
    ];

    protected $casts = [
        'is_active' => 'boolean',
    ];

    public function user(): BelongsTo
    {
        return $this->belongsTo(User::class);
    }

    public function team(): BelongsTo
    {
        return $this->belongsTo(Team::class);
    }

    public function educations(): HasMany
    {
        return $this->hasMany(EmployeeEducation::class);
    }

    public function highestEducation(): HasMany
    {
        return $this->hasMany(EmployeeEducation::class)->where('is_highest', true);
    }

    public function teamHistories(): HasMany
    {
        return $this->hasMany(EmployeeTeamHistory::class);
    }

    public function projects(): BelongsToMany
    {
        return $this->belongsToMany(Project::class, 'project_members')
            ->withPivot('role')
            ->withTimestamps();
    }

    public function performanceReports(): HasMany
    {
        return $this->hasMany(PerformanceReport::class, 'reported_by');
    }

    public function teams(): BelongsToMany
    {
        return $this->belongsToMany(Team::class, 'employee_team')
            ->withPivot(['role', 'is_primary', 'started_at', 'ended_at'])
            ->withTimestamps();
    }

    public function ledTeams(): BelongsToMany
    {
        return $this->teams()->wherePivot('role', 'leader');
    }

    public function kipActivities(): HasMany
    {
        return $this->hasMany(KipActivity::class);
    }
}
